modified coin fetcher

--- a/config/packages/eight_points_guzzle.yaml
+++ b/config/packages/eight_points_guzzle.yaml
@@ -1,5 +1,5 @@
 eight_points_guzzle:
-    logging: true
+    logging: false
     clients:
         api_coinmarketcap:
             base_url: "https://api.coinmarketcap.com"
