--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.0.8",
         "ext-iconv": "*",
         "eightpoints/guzzle-bundle": "^7.2",
+        "knplabs/knp-time-bundle": "^1.8",
         "stof/doctrine-extensions-bundle": "^1.3",
         "symfony/asset": "^3.4",
         "symfony/console": "^3.4",
