--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,11 @@
         "symfony/framework-bundle": "^3.4",
         "symfony/lts": "^3",
         "symfony/maker-bundle": "^1.0",
+        "symfony/monolog-bundle": "^3.1",
         "symfony/orm-pack": "^1.0",
         "symfony/twig-bundle": "^3.4",
-        "symfony/yaml": "^3.4"
+        "symfony/yaml": "^3.4",
+        "white-october/pagerfanta-bundle": "^1.1"
     },
     "require-dev": {
         "symfony/dotenv": "^3.4",
